# opengl-learn

./: .gitignore  CMakeLists.txt  ObjImporter.cpp  ObjImporter.h  Sphere.cpp  Sphere.h  Torus.cpp  Torus.h  main.cpp  utils.h
glsl/: fragShader.glsl  singleColor.glsl  vertShader.glsl
glsl/gouraud/: fragShader.glsl  vertShader.glsl
glsl/phong/: fragShader.glsl  fragShader1.glsl  fragShader2.glsl  vertShader.glsl  vertShader1.glsl  vertShader2.glsl
